Move experiment admin API from Guava’s functional primitives to Java 8 native